--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         My experience with programming started a few months ago, when I started my courses in Software University. I started to bild
         a website for my dad's auto servise business, but I also was taking 3 courses at the same time, so I didn't finish
-        it. I planing to countinue with my courses and in the next one we're going to code in
+        it. I want to countinue with my courses and in the next one we're going to code in
         <span class=" font-weight-bold">C#</span> and I can't wait it! So I have basic knowlege of these main technologies:
       </p>
       <div class="row">
